<resources>
    <string name="app_name">ProyectoFinalAndroid</string>

    <string name="cajaUsuario">Usuario</string>
    <string name="cajaContraseña">Contraseña</string>
    <string name="btnAcceder">Acceder</string>

    <string name="txtSeleciona">Selecciona una opción</string>
    <string name="btnAltas">Altas</string>
    <string name="btnBajas">BAjas</string>
    <string name="btnCambios">Cambios</string>
    <string name="btnConsultas">Consultas</string>
    <string name="btnSalirMenu">Salir</string>

    <string name="txtAltas">Altas Proyecto</string>
    <string name="cajaNombre">Nombre</string>
    <string name="cajaNumero">Número</string>
    <string name="cajaUbicacion">Ubicación</string>
    <string name="cajaNumeroDepartamento">Número de departamento</string>
    <string name="btnAgregar">Agregar</string>
    <string name="btnBorrar">Borrar</string>

    <string name="txtBajas">Bajas Proyecto</string>
    <string name="cajaNombre1">Nombre</string>
    <string name="cajaNumero1">Número</string>
    <string name="cajaUbicacion1">Ubicación</string>
    <string name="cajaNumeroDepartamento1">Número de departamento</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnBuscar1">Buscar</string>
    <string name="btnBorrar1">Borrar</string>

    <string name="txtCambios">Cambios Proyecto</string>
    <string name="cajaNombre3">Nombre</string>
    <string name="cajaNumero3">Número</string>
    <string name="cajaUbicacion3">Ubicación</string>
    <string name="cajaNumeroDepartamento3">Número de departamento</string>
    <string name="btnModificar">Modificar</string>
    <string name="btnBuscar3">Buscar</string>
    <string name="btnBorrar3">Borrar</string>

    <string name="txtConsultas">Consultas Proyecto</string>
    <string name="cajaNombre4">Nombre</string>
    <string name="cajaNumero4">Número</string>
    <string name="cajaUbicacion4">Ubicación</string>
    <string name="cajaNumeroDepartamento4">Número de departamento</string>
    <string name="btnBuscar">Buscar</string>


</resources>