<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="35dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="36dp"
        android:text="@string/txtBajas"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_Nombre2"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="@string/cajaNombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txt_Numero2"
        android:layout_width="234dp"
        android:layout_height="61dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/cajaNumero1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Nombre2" />

    <EditText
        android:id="@+id/txt_Ubicacion2"
        android:layout_width="232dp"
        android:layout_height="51dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/cajaUbicacion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Numero2" />

    <EditText
        android:id="@+id/txt_NumeroDpto2"
        android:layout_width="238dp"
        android:layout_height="55dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/cajaNumeroDepartamento1"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Ubicacion2" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:onClick="eliminarProyecto"
        android:text="@string/btnEliminar"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/txt_NumeroDpto2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:onClick="buscar"
        android:text="@string/btnBuscar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NumeroDpto2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="11dp"
        android:onClick="borrar"
        android:text="@string/btnBorrar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eliminar" />

</androidx.constraintlayout.widget.ConstraintLayout>