<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:text="@string/txtConsultas"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_Numero4"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/cajaNumero"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/txt_RecyclerV"
        android:layout_width="337dp"
        android:layout_height="422dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Numero4" />

    <EditText
        android:id="@+id/txt_Nombre4"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/cajaNombre4"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>